<resources>
    <string name="app_name">FriendsPlus</string>
    <string name="main_font">sans-serif</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_msg">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_msg">Already have an account? Login</string>
    <string name="forgotten_password">Forgotten password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="fui_accessibility_logo" translation_description="Content description for app logo">App logo</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with e-mail</string>

    <string name="facebook_app_id">329106764489375</string>
    <string name="fb_login_protocol_scheme">fb329106764489375</string>

    <string name="account">Account</string>
    <string name="meetings">Meetings</string>
    <string name="friends">Friends</string>
    <string name="tracking">Tracking</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="tracking_in_progress">● Tracking...</string>
    <string name="delete">Delete</string>

    <string name="name">Name</string>
    <string name="select_a_place">Select a place</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="new_meeting">Add new meeting</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="added_by">Added by </string>
    <string name="done">Done</string>
    <string name="expired">● Expired</string>
    <string name="finished">● Finished</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>


</resources>
